templates/cloudbees-core-addl-nodes.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploys additional node pools to an EKS Quick Start cluster (qs-1pipqrqef)

Metadata:
  cfn-lint:
    config:
      ignore_checks:
      - W2507 # BastionSecurityGroup is intentionally a String instead of AWS::EC2::SecurityGroup::Id

Parameters:
  KeyPairName:
    Description: The name of an existing public/private key pair, which allows you
      to securely connect to your instance after it launches
    Type: AWS::EC2::KeyPair::KeyName
  VPCID:
    Type: "AWS::EC2::VPC::Id"
  PrivateSubnet1ID:
    Type: "AWS::EC2::Subnet::Id"
  PrivateSubnet2ID:
    Type: String
    Default: ""
  PrivateSubnet3ID:
    Type: String
    Default: ""
  RegularNodeInstanceType:
    Default: m5.large
    AllowedValues: [ t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge, m5.large, m5.xlarge, m5.2xlarge,
                     m5.4xlarge, m5.12xlarge, m5.24xlarge, c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge,
                     i3.large, i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge, i3.16xlarge, x1.16xlarge, x1.32xlarge, p3.2xlarge,
                     p3.8xlarge, p3.16xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge, r5d.large,
                     r5d.xlarge, r5d.2xlarge, r5d.4xlarge, r5d.12xlarge, r5d.24xlarge, z1d.large, z1d.xlarge, z1d.2xlarge,
                     z1d.3xlarge, z1d.6xlarge, z1d.12xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type
    Description: The Amazon EC2 instance type for the regular agents node group.
    Type: String
  SpotNodeInstanceType1:
    Default: m4.large #2x8
    AllowedValues: [ t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge, t3.nano, t3.micro, t3.small, t3.medium, t3.large,
                     t3.xlarge, t3.2xlarge, m3.medium, m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge,
                     m4.4xlarge, m4.10xlarge, m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge, m5.12xlarge, m5.24xlarge, m5.metal,
                     m5d.large, m5d.xlarge, m5d.2xlarge, m5d.4xlarge, m5d.12xlarge, m5d.24xlarge, m5d.metal, m5a.large, m5a.xlarge,
                     m5a.2xlarge, m5a.4xlarge, m5a.12xlarge, m5a.24xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge,
                     c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge, i3.large, i3.xlarge, i3.2xlarge,
                     i3.4xlarge, i3.8xlarge, i3.16xlarge, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, r4.large, r4.xlarge,
                     r4.2xlarge, r4.4xlarge, r4.8xlarge, r4.16xlarge, x1.16xlarge, x1.32xlarge, p2.xlarge, p2.8xlarge, p2.16xlarge,
                     p3.2xlarge, p3.8xlarge, p3.16xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge,
                     r5d.large, r5d.xlarge, r5d.2xlarge, r5d.4xlarge, r5d.12xlarge, r5d.24xlarge, z1d.large, z1d.xlarge, z1d.2xlarge,
                     z1d.3xlarge, z1d.6xlarge, z1d.12xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type
    Description: The first Amazon EC2 instance type for the spot agents node group.
    Type: String
  SpotNodeInstanceType2:
    Default: m5.large #2x8 newer
    AllowedValues: [ t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge, t3.nano, t3.micro, t3.small, t3.medium, t3.large,
                     t3.xlarge, t3.2xlarge, m3.medium, m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge,
                     m4.4xlarge, m4.10xlarge, m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge, m5.12xlarge, m5.24xlarge, m5.metal,
                     m5d.large, m5d.xlarge, m5d.2xlarge, m5d.4xlarge, m5d.12xlarge, m5d.24xlarge, m5d.metal, m5a.large, m5a.xlarge,
                     m5a.2xlarge, m5a.4xlarge, m5a.12xlarge, m5a.24xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge,
                     c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge, i3.large, i3.xlarge, i3.2xlarge,
                     i3.4xlarge, i3.8xlarge, i3.16xlarge, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, r4.large, r4.xlarge,
                     r4.2xlarge, r4.4xlarge, r4.8xlarge, r4.16xlarge, x1.16xlarge, x1.32xlarge, p2.xlarge, p2.8xlarge, p2.16xlarge,
                     p3.2xlarge, p3.8xlarge, p3.16xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge,
                     r5d.large, r5d.xlarge, r5d.2xlarge, r5d.4xlarge, r5d.12xlarge, r5d.24xlarge, z1d.large, z1d.xlarge, z1d.2xlarge,
                     z1d.3xlarge, z1d.6xlarge, z1d.12xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type
    Description: The second Amazon EC2 instance type for the spot agents node group.
    Type: String
  SpotNodeInstanceType3:
    Default: m5a.large #2x8 amd
    AllowedValues: [ t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge, t3.nano, t3.micro, t3.small, t3.medium, t3.large,
                     t3.xlarge, t3.2xlarge, m3.medium, m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge,
                     m4.4xlarge, m4.10xlarge, m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge, m5.12xlarge, m5.24xlarge, m5.metal,
                     m5d.large, m5d.xlarge, m5d.2xlarge, m5d.4xlarge, m5d.12xlarge, m5d.24xlarge, m5d.metal, m5a.large, m5a.xlarge,
                     m5a.2xlarge, m5a.4xlarge, m5a.12xlarge, m5a.24xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge,
                     c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge, i3.large, i3.xlarge, i3.2xlarge,
                     i3.4xlarge, i3.8xlarge, i3.16xlarge, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, r4.large, r4.xlarge,
                     r4.2xlarge, r4.4xlarge, r4.8xlarge, r4.16xlarge, x1.16xlarge, x1.32xlarge, p2.xlarge, p2.8xlarge, p2.16xlarge,
                     p3.2xlarge, p3.8xlarge, p3.16xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge,
                     r5d.large, r5d.xlarge, r5d.2xlarge, r5d.4xlarge, r5d.12xlarge, r5d.24xlarge, z1d.large, z1d.xlarge, z1d.2xlarge,
                     z1d.3xlarge, z1d.6xlarge, z1d.12xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type
    Description: The third Amazon EC2 instance type for the spot agents node group.
    Type: String
  SpotNodeInstanceType4:
    Default: m5d.large #2x8 fast disk
    AllowedValues: [ t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge, t3.nano, t3.micro, t3.small, t3.medium, t3.large,
                     t3.xlarge, t3.2xlarge, m3.medium, m3.large, m3.xlarge, m3.2xlarge, m4.large, m4.xlarge, m4.2xlarge,
                     m4.4xlarge, m4.10xlarge, m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge, m5.12xlarge, m5.24xlarge, m5.metal,
                     m5d.large, m5d.xlarge, m5d.2xlarge, m5d.4xlarge, m5d.12xlarge, m5d.24xlarge, m5d.metal, m5a.large, m5a.xlarge,
                     m5a.2xlarge, m5a.4xlarge, m5a.12xlarge, m5a.24xlarge, c4.large, c4.xlarge, c4.2xlarge, c4.4xlarge, c4.8xlarge,
                     c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge, c5.18xlarge, i3.large, i3.xlarge, i3.2xlarge,
                     i3.4xlarge, i3.8xlarge, i3.16xlarge, r3.xlarge, r3.2xlarge, r3.4xlarge, r3.8xlarge, r4.large, r4.xlarge,
                     r4.2xlarge, r4.4xlarge, r4.8xlarge, r4.16xlarge, x1.16xlarge, x1.32xlarge, p2.xlarge, p2.8xlarge, p2.16xlarge,
                     p3.2xlarge, p3.8xlarge, p3.16xlarge, r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r5.12xlarge, r5.24xlarge,
                     r5d.large, r5d.xlarge, r5d.2xlarge, r5d.4xlarge, r5d.12xlarge, r5d.24xlarge, z1d.large, z1d.xlarge, z1d.2xlarge,
                     z1d.3xlarge, z1d.6xlarge, z1d.12xlarge ]
    ConstraintDescription: Must be a valid EC2 instance type
    Description: The fourth Amazon EC2 instance type for the spot agents node group.
    Type: String
  NumberOfRegularNodes:
    Default: 3
    Description: Initial number of "Regular Agents" node instances
    Type: Number
  NumberOfSpotNodes:
    Default: 3
    Description: Initial number of "Spot Agents" node instances
    Type: Number
  NodeVolumeSize:
    Default: 20
    Description: Size for node volumes
    Type: String
  CustomAmiId:
    Default: ""
    Type: String
  EKSControlPlane: 
    Type: String
  ControlPlaneSecurityGroup: 
    Type: AWS::EC2::SecurityGroup::Id
  InitialNodeGroupSecurityGroup:
    Type: AWS::EC2::SecurityGroup::Id
  BastionSecurityGroup:
    Type: String
  KubernetesVersion: 
    Type: String
  QSS3BucketName:
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Description: S3 bucket name for the Quick Start assets. This string can include
      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
      or end with a hyphen (-).
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: quickstart-cloudbees-core/
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    Type: String
  QSS3BucketRegion:
    Default: 'us-east-1'
    Description: The AWS Region where the Quick Start S3 bucket (QSS3BucketName) is
      hosted. When using your own bucket, you must specify this value.
    Type: String
Conditions:
  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
  UsingBastion: !Not [!Equals [!Ref 'BastionSecurityGroup', '']]
Resources:
  RegularAgentNodesStack:
    Type: "AWS::CloudFormation::Stack"
    Properties:
      TemplateURL: !Sub
        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}submodules/quickstart-amazon-eks/submodules/quickstart-amazon-eks-nodegroup/templates/amazon-eks-nodegroup.template.yaml'
        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        KeyPairName: !Ref 'KeyPairName'
        Subnet1ID: !Ref PrivateSubnet1ID
        Subnet2ID: !Ref PrivateSubnet2ID
        Subnet3ID: !Ref PrivateSubnet3ID
        NodeInstanceType: !Ref RegularNodeInstanceType
        NumberOfNodes: !Ref NumberOfRegularNodes
        NodeGroupName: "cloudbees-core-regular-agents"
        NodeVolumeSize: !Ref NodeVolumeSize
        CustomAmiId: !Ref CustomAmiId
        EKSClusterName: !Ref EKSControlPlane
        Labels: "partition=regular-agents"
        Taints: "partition=regular-agents:NoSchedule"
  SpotAgentNodesStack:
    Type: "AWS::CloudFormation::Stack"
    Properties:
      TemplateURL: !Sub
        - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/cloudbees-core-spot-nodes.template.yaml'
        - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
          S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
      Parameters:
        KeyPairName: !Ref 'KeyPairName'
        PrivateSubnet1ID: !Ref PrivateSubnet1ID
        PrivateSubnet2ID: !Ref PrivateSubnet2ID
        PrivateSubnet3ID: !Ref PrivateSubnet3ID
        VPCID: !Ref VPCID
        SpotNodeInstanceType1: !Ref SpotNodeInstanceType1
        SpotNodeInstanceType2: !Ref SpotNodeInstanceType2
        SpotNodeInstanceType3: !Ref SpotNodeInstanceType3
        SpotNodeInstanceType4: !Ref SpotNodeInstanceType4
        NumberOfNodes: !Ref NumberOfSpotNodes
        NodeGroupName: "cloudbees-core-spot-agents"
        NodeVolumeSize: !Ref NodeVolumeSize
        CustomAmiId: !Ref CustomAmiId
        EKSControlPlane: !Ref EKSControlPlane
        ControlPlaneSecurityGroup: !Ref ControlPlaneSecurityGroup
        KubernetesVersion: !Ref KubernetesVersion
  #Allow the bastion host to SSH into the additional node pools
  BastionToRegularIngress:
    Condition: UsingBastion
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow SSH from Bastion server to Regular Nodes
      GroupId: !GetAtt RegularAgentNodesStack.Outputs.EKSNodeSecurityGroup
      SourceSecurityGroupId: !Ref BastionSecurityGroup
      IpProtocol: tcp
      ToPort: 22
      FromPort: 22
  BastionToSpotIngress:
    Condition: UsingBastion
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      Description: Allow SSH from Bastion server to Spot Nodes
      GroupId: !GetAtt SpotAgentNodesStack.Outputs.EKSNodeSecurityGroup
      SourceSecurityGroupId: !Ref BastionSecurityGroup
      IpProtocol: tcp
      ToPort: 22
      FromPort: 22
  #Allow the two additional node pools to bidirectionally communicate with "initial" (master) nodes
  RegularToMasterIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: Allows regular nodes to communicate with master nodes
      GroupId: !Ref InitialNodeGroupSecurityGroup
      SourceSecurityGroupId: !GetAtt RegularAgentNodesStack.Outputs.EKSNodeSecurityGroup
      IpProtocol: '-1'
      FromPort: 0
      ToPort: 65535
  SpotToMasterIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: Allows spot nodes to communicate with master nodes
      GroupId: !Ref InitialNodeGroupSecurityGroup
      SourceSecurityGroupId: !GetAtt SpotAgentNodesStack.Outputs.EKSNodeSecurityGroup
      IpProtocol: '-1'
      FromPort: 0
      ToPort: 65535
  MasterToRegularIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: Allows master nodes to communicate with regular agent nodes
      GroupId: !GetAtt RegularAgentNodesStack.Outputs.EKSNodeSecurityGroup
      SourceSecurityGroupId: !Ref InitialNodeGroupSecurityGroup
      IpProtocol: '-1'
      FromPort: 0
      ToPort: 65535
  MasterToSpotIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      Description: Allows master nodes to communicate with spot agent nodes
      GroupId: !GetAtt SpotAgentNodesStack.Outputs.EKSNodeSecurityGroup
      SourceSecurityGroupId: !Ref InitialNodeGroupSecurityGroup
      IpProtocol: '-1'
      FromPort: 0
      ToPort: 65535
